RESOLVED FIXED185926
Fix Issues with Loupe Gesture
https://bugs.webkit.org/show_bug.cgi?id=185926
Summary Fix Issues with Loupe Gesture
Megan Gardner
Reported 2018-05-23 16:37:58 PDT
Fix Issues with Loupe Gesture
Attachments
Patch (5.44 KB, patch)
2018-05-23 16:44 PDT, Megan Gardner
no flags
Patch (6.03 KB, patch)
2018-05-23 19:20 PDT, Megan Gardner
no flags
Patch (6.06 KB, patch)
2018-05-24 09:26 PDT, Megan Gardner
no flags
Patch for landing (6.06 KB, patch)
2018-05-24 13:25 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2018-05-23 16:44:19 PDT
Megan Gardner
Comment 2 2018-05-23 16:45:06 PDT
Tim Horton
Comment 3 2018-05-23 17:09:06 PDT
Comment on attachment 341146 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341146&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:3212 > +#if ENABLE(MINIMAL_SIMULATOR) > + if (!range) > + [self clearSelection]; > +#endif > if (hasAssistedNode(_assistedNodeInformation) && !range) Possibly(?) better written if (range) return; #if !ENABLE(MINIMAL_SIMULATOR) if (!hasAssistedNode(_assistedNodeInformation)) return; #endif [self clearSelection]; > Source/WebKit/WebProcess/WebPage/WebPage.h:1545 > #endif > + > +#if PLATFORM(IOS) Merge these sections > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:1147 > + if (range->collapsed()) I’m pretty sure there’s a better way to do this (to sort two positions)
Megan Gardner
Comment 4 2018-05-23 19:20:51 PDT
Wenson Hsieh
Comment 5 2018-05-23 20:39:31 PDT
Comment on attachment 341157 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341157&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:3213 > + if (hasAssistedNode(_assistedNodeInformation)) I agree with Tim's earlier comment. It's a bit weird that we'd need to clear selection twice here in minimal simulator mode, if we are focusing an editable element.
Megan Gardner
Comment 6 2018-05-24 09:26:47 PDT
Tim Horton
Comment 7 2018-05-24 11:07:38 PDT
Comment on attachment 341197 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341197&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:3212 > [self clearSelection]; You’re still repeating yourself with the clearSelection! Mine was better :P
Megan Gardner
Comment 8 2018-05-24 13:25:14 PDT
Created attachment 341222 [details] Patch for landing
WebKit Commit Bot
Comment 9 2018-05-24 14:03:50 PDT
Comment on attachment 341222 [details] Patch for landing Clearing flags on attachment: 341222 Committed r232164: <https://trac.webkit.org/changeset/232164>
WebKit Commit Bot
Comment 10 2018-05-24 14:03:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.