Fix Issues with Loupe Gesture https://bugs.webkit.org/show_bug.cgi?id=185926

Reviewed by Tim Horton.

The loupe gesture was not giving us the correct selection in some situations.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizer:canBePreventedByGestureRecognizer:]):
(-[WKContentView gestureRecognizer:shouldRecognizeSimultaneouslyWithGestureRecognizer:]):
(-[WKContentView setSelectedTextRange:]):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::selectWithGesture):
(WebKit::WebPage::clearSelection):


Canonical link: https://commits.webkit.org/201396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232164 268f45cc-cd09-0410-ab3c-d52691b4dbfc